@@ -118,6 +118,17 @@
         </argument>
     </command>
     <command binary="false">
+        <name>xmppGroupMessage</name>
+        <execute>org.opennms.netmgt.notifd.XMPPGroupNotificationStrategy</execute>
+        <comment>class for sending XMPP Group Chat notifications</comment>
+        <argument streamed="false">
+            <switch>-xmpp</switch>
+        </argument>
+        <argument streamed="false">
+            <switch>-tm</switch>
+        </argument>
+    </command>
+    <command binary="false">
         <name>growlMessage</name>
         <execute>org.opennms.netmgt.notifd.GrowlNotificationStrategy</execute>
         <comment>class for sending Growl notifications on Mac OS X</comment>
